--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,7 @@ spring.jpa.show-sql=true
 
 spring.batch.job.enabled=false
 spring.batch.jdbc.initialize-schema=always
+
+spring.kafka.bootstrap-servers=3.38.56.140:9092
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
