--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=batch
 
-spring.datasource.url=jdbc:mysql://batch-db.cj06aomcgfqr.ap-northeast-2.rds.amazonaws.com:3306/capstone_project
+spring.datasource.url=jdbc:mysql://user-db.cj06aomcgfqr.ap-northeast-2.rds.amazonaws.com:3306/capstone_project
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=admin
 spring.datasource.password=ureca!#%!#
