feat: VT2-60 jdbcBatchWriter로 변경

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,8 @@ spring.datasource.password=ureca!#%!#
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+# SQL ?? ?? ??
+logging.level.org.springframework.jdbc.core=DEBUG
 
 spring.batch.job.enabled=false
 spring.batch.jdbc.initialize-schema=always
