--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,7 @@ spring.datasource.password=ureca!#%!#
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-# SQL ?? ?? ??
-logging.level.org.springframework.jdbc.core=DEBUG
+#logging.level.org.springframework.jdbc.core=DEBUG
 
 spring.batch.job.enabled=false
 spring.batch.jdbc.initialize-schema=always
