--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,5 @@ spring.batch.jdbc.initialize-schema=always
 spring.kafka.bootstrap-servers=3.38.56.140:9092
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+
+discord.webhook.url = https://discord.com/api/webhooks/1396403530176401530/zt9i6ttEwkVvUE2MvEiN-6bpD1RKG-UdRxaXrFxLjqM5hc6nzuxpgM1yQVTnfYDK30Qf
