--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,15 @@
 spring.application.name=batch
 
-spring.datasource.url=jdbc:mysql://user-db.cj06aomcgfqr.ap-northeast-2.rds.amazonaws.com:3306/capstone_project
+#spring.datasource.url=jdbc:mysql://user-db.cj06aomcgfqr.ap-northeast-2.rds.amazonaws.com:3306/capstone_project
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.username=admin
+#spring.datasource.password=ureca!#%!#
+
+#?rewriteBatchedStatements=true
+spring.datasource.url=jdbc:mysql://localhost:3306/batch_test
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=admin
-spring.datasource.password=ureca!#%!#
+spring.datasource.username=root
+spring.datasource.password=root
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
@@ -15,3 +21,7 @@ spring.batch.jdbc.initialize-schema=always
 spring.kafka.bootstrap-servers=3.38.56.140:9092
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+
+# Slack api
+slack.bot.token=xoxb-8944734399748-8944745429348-rcydsfb5BDX1L5BontfZSvkZ
+slack.channel=#slack-api-test
