--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,9 @@
 spring.application.name=batch
 
-#spring.datasource.url=jdbc:mysql://user-db.cj06aomcgfqr.ap-northeast-2.rds.amazonaws.com:3306/capstone_project
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.datasource.username=admin
-#spring.datasource.password=ureca!#%!#
-
-#?rewriteBatchedStatements=true
-spring.datasource.url=jdbc:mysql://localhost:3306/batch_test
+spring.datasource.url=jdbc:mysql://user-db.cj06aomcgfqr.ap-northeast-2.rds.amazonaws.com:3306/capstone_project
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.username=admin
+spring.datasource.password=ureca!#%!#
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
