chore: VT2-60 SLACK 토큰 환경변수로

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,5 +17,5 @@ spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.Strin
 spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
 
 # Slack api
-slack.bot.token=xoxb-8944734399748-8944745429348-rcydsfb5BDX1L5BontfZSvkZ
-slack.channel=#slack-api-test
+slack.bot.token={SLACK_TOKEN}
+slack.channel={SLACK_CHANNEL}
