chore: SLACK 토큰 설정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,7 @@ spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.Strin
 spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
 
 # Slack api
-slack.bot.token=${SLACK_TOKEN}
-slack.channel=${SLACK_CHANNEL}
+slack.bot.token=xoxb-8944734399748-8944745429348-jtc4v6aRETtx73TM2ici79jy
+slack.channel=#slack-api-test
 discord.webhook.url = https://discord.com/api/webhooks/1396403530176401530/zt9i6ttEwkVvUE2MvEiN-6bpD1RKG-UdRxaXrFxLjqM5hc6nzuxpgM1yQVTnfYDK30Qf
 
