VT2-53 feat: 스웨거 추가 및 jobParameter 타입 변경

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,10 @@ slack.bot.token=${SLACK_TOKEN}
 slack.channel=${SLACK_CHANNEL}
 discord.webhook.url = https://discord.com/api/webhooks/1396403530176401530/zt9i6ttEwkVvUE2MvEiN-6bpD1RKG-UdRxaXrFxLjqM5hc6nzuxpgM1yQVTnfYDK30Qf
 
+springdoc.packages-to-scan=eureca.capstone.project.batch
+springdoc.default-consumes-media-type=application/json;charset=UTF-8
+springdoc.default-produces-media-type=application/json;charset=UTF-8
+springdoc.swagger-ui.path= /swagger-ui.html
+springdoc.swagger-ui.disable-swagger-default-url= true
+springdoc.swagger-ui.display-request-duration=true
+springdoc.swagger-ui.operations-sorter=alpha
