VT-272 feat: 배치처리시 엘라스틱서치 동기화 구현

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,3 +29,5 @@ springdoc.swagger-ui.path= /swagger-ui.html
 springdoc.swagger-ui.disable-swagger-default-url= true
 springdoc.swagger-ui.display-request-duration=true
 springdoc.swagger-ui.operations-sorter=alpha
+
+spring.elasticsearch.uris=http://13.124.136.141:9200
