feat: VT2-265 데이터 충전권, 이벤트 쿠폰 만료 알림 전송

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.batch.jdbc.initialize-schema=always
 
 spring.kafka.bootstrap-servers=3.38.56.140:9092
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
-spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
 
 # Slack api
 slack.bot.token=xoxb-8944734399748-8944745429348-jtc4v6aRETtx73TM2ici79jy
