--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,10 +5,14 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=admin
 spring.datasource.password=ureca!#%!#
 
+spring.profiles.active=test
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.order_updates=true
 spring.jpa.properties.hibernate.jdbc.batch_size=100
+
+logging.level.org.springframework.jdbc.core=INFO
 
 spring.batch.job.enabled=false
 spring.batch.jdbc.initialize-schema=always
