--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -11,6 +11,8 @@ spring.h2.console.path=/h2-console
 # JPA Settings for H2
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 
 spring.batch.job.enabled=false
