--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -12,7 +12,5 @@ spring.h2.console.path=/h2-console
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 spring.jpa.hibernate.ddl-auto=update
-
-spring.jpa.properties.hibernate.globally_quoted_identifiers=true
-
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.batch.job.enabled=false
