--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=batch
 
-spring.datasource.url=jdbc:mysql://user-db.cj06aomcgfqr.ap-northeast-2.rds.amazonaws.com:3306/capstone_project
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=admin
-spring.datasource.password=ureca!#%!#
+#spring.datasource.url=jdbc:mysql://user-db.cj06aomcgfqr.ap-northeast-2.rds.amazonaws.com:3306/capstone_project
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.username=admin
+#spring.datasource.password=ureca!#%!#
 
 spring.profiles.active=test
 
@@ -22,9 +22,9 @@ spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.Strin
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
 
 # Slack api
-slack.bot.token=xoxb-8944734399748-8944745429348-jtc4v6aRETtx73TM2ici79jy
-slack.channel=#slack-api-test
-discord.webhook.url = https://discord.com/api/webhooks/1396403530176401530/zt9i6ttEwkVvUE2MvEiN-6bpD1RKG-UdRxaXrFxLjqM5hc6nzuxpgM1yQVTnfYDK30Qf
+#slack.bot.token=xoxb-8944734399748-8944745429348-jtc4v6aRETtx73TM2ici79jy
+#slack.channel=#slack-api-test
+#discord.webhook.url = https://discord.com/api/webhooks/1396403530176401530/zt9i6ttEwkVvUE2MvEiN-6bpD1RKG-UdRxaXrFxLjqM5hc6nzuxpgM1yQVTnfYDK30Qf
 
 springdoc.packages-to-scan=eureca.capstone.project.batch
 springdoc.default-consumes-media-type=application/json;charset=UTF-8
