--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,18 +1,27 @@
-# H2 Settings for Test Profile
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+## H2 Settings for Test Profile
+#spring.datasource.url=jdbc:h2:mem:testdb;DATABASE_TO_UPPER=false
+#spring.datasource.driver-class-name=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
+#
+## H2 Console
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
+#
+## JPA Settings for H2
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#
+#spring.jpa.hibernate.ddl-auto=update
+#
+#spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+#
+#spring.batch.job.enabled=false
+#
+#logging.level.org.springframework.batch=DEBUG
+#logging.level.org.springframework.jdbc=DEBUG
 
-# H2 Console
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
 
-# JPA Settings for H2
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-
-spring.jpa.hibernate.ddl-auto=update
-
-spring.jpa.properties.hibernate.globally_quoted_identifiers=true
-
-spring.batch.job.enabled=false
+spring.datasource.url=jdbc:mysql://localhost:3306/batch_test
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=root
