--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -21,7 +21,7 @@
 #logging.level.org.springframework.jdbc=DEBUG
 
 
-spring.datasource.url=jdbc:mysql://localhost:3306/batch_test
+spring.datasource.url=jdbc:mysql://localhost:3306/batch_test2
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=root
